--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Home | ZxYTeams</title>
+      <title>Home | Vallxx</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -11,13 +11,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="" />
       <meta name="keywords" content=" "/>
-      <meta name="author" content="zxagung">
+      <meta name="author" content="Vallxx">
       <meta name="robots" content="index, follow" />
     <script> 
     alert('Welcome Gan')
-    alert('Perkenalkan Namaku Zxagung')
-    alert('status jomblo')
-    alert('hobby? nonton anime, baca manga,')
+    alert('Perkenalkan Nama Saya Rival')
+    alert('Status Sendiri')
+    alert('Hobby Saya Ngoding, Dan Dll')
    </script>
    </head>
    <style>
@@ -57,7 +57,7 @@
          <div class="name">
             Welcome
          </div>
-         <p class="subtitle rainbow">zxagung Web</p>
+         <p class="subtitle rainbow">Vall Web</p>
          <p class="location"><a href="calc/" target="_blank">Calculator</a></p>
          <p class="location"><a href="phlogo/" target="_blank">Ph Logo</a></p>
          <p class="location"><a href="ttt/" target="_blank">TicTacToe Game</a></p>
@@ -76,16 +76,16 @@
          <p class="location"><a href="instagram-dwn-mp4" target="_blank">instagram-dwn-mp4</a></p>
          <p class="location"><a href="http://bacamangav2.infinityfreeapp.com" target="_blank">baca manga</a></p>
          <p class="location"><a href="https://download.apkfiles.com/download/609130/streamdroi.apk?923688" target="_blank">apk streamdroi</a></p>
-         <p class="location"><a href="https://apiizxyyy.herokuapp.com/" target="_blank">Rest API 1</a></p>
-         <p class="location"><a href="https://zxbott.herokuapp.com/" target="_blank">Rest API 2</a></p>
+         <p class="location"><a href="https://zynfx.herokuapp.com" target="_blank">Rest API 1</a></p>
+         <p class="location"><a href="https://myzynfx.herokuapp.com" target="_blank">Rest API 2</a></p>
          <p class="icons animated pulse">
-            <a href="https://instagram.com/_zxagung" target="_blank">
+            <a href="https://instagram.com/_.zynfx" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x"></i>
             </span>
             </a>
-            <a href="https://wa.me/6289655478810" target="_blank">
+            <a href="https://wa.me/6281314050985" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-whatsapp fa-stack-1x"></i>
@@ -98,7 +98,7 @@
     <br>
     <p></p>
     <blink>
-     <font face="monaco" size="15" font="" style="text-shadow: 0px 0px 30px red;" color="white">ZxAgung Gans</font>
+     <font face="monaco" size="15" font="" style="text-shadow: 0px 0px 30px red;" color="white">Vall Gans</font>
      <font face="Orbitron" size="7" color="white" class="a"></font>
      <br>
     </blink>
@@ -107,7 +107,7 @@
    <center>
    	   <font face="courier new" size="3" font="" style="text-shadow: 0px 0px 5px white;" color="white"><font color="yellow">Thanks :</font>
         <marquee scrollamount="5" scrolldelay="50" width="80%">
-         <strong><i><b>ZxAgung - RENANDO - Fadhil - Panji - AKMALZ - RIZKYDEV - PUTRA - ALL MY FRIENDS </b></i></strong>
+         <strong><i><b>ZxAgung - Vall ( saya ) - And My Friend :)</b></i></strong>
         </marquee></font>
     	<embed src="https://l.top4top.io/m_2048lav8n0.mp3" type="audio/mpeg" autostart="true" loop="true" height="0" width="0">
    </center>
@@ -118,7 +118,7 @@
     <!--Fix Mau Nyolong-->
       <!--footer-->
       <footer class="animated fadeIn">
-         &copy; 2021. Zxagung.
+         &copy; 2022. Zynfx ( vall ).
       </footer>
      </body>
 </html>
